# nahualscript

./: .gitignore  README.md  consolidate_project.py  ejecutar.ps1  nahual_setup.py  nahualscript_project_20241126_041401.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_windows.py  test.nhl
examples/: calc-area.nhl  entrada-de-usuario.nhl  hola-mundo.nhl  if-igual-mayor-menor-que.nhl  operaciones-matematicas.nhl
src/: main.py
src/nahual/: __main__.py  environment.py  error_handler.py  function.py  interpreter.py  lexer.py  logger.py  parser.py  type_checker.py  types.py
test/: test_integration.py  test_interpreter.py  test_lexer.py  test_suite.py
