# setup.cfg
[metadata]
name = nahualscript
version = 0.1.0
description = Lenguaje de programación místico NahualScript
long_description = file: README.md
long_description_content_type = text/markdown
author = Tu Nombre
author_email = tu@email.com
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    ply>=3.11

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nahual = nahual.__main__:main